<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/back3"
    tools:context=".login">

<TextView
android:text="@string/login"
android:layout_marginBottom="25dp"
android:gravity="center"
android:textSize="30sp"
android:textStyle="bold"
android:layout_width="match_parent"
android:layout_height="wrap_content"/>

<TextView
android:text="@string/Email"
android:textSize="20sp"
android:textStyle="italic"
android:layout_width="match_parent"
android:layout_height="wrap_content"/>

<com.google.android.material.textfield.TextInputLayout
android:layout_width="match_parent"
android:layout_height="wrap_content">
<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/email"
    android:hint="@string/Email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

<TextView
android:text="@string/Password"
android:textSize="20sp"
android:textStyle="italic"
android:layout_width="match_parent"
android:layout_height="wrap_content"/>

<com.google.android.material.textfield.TextInputLayout
android:layout_width="match_parent"
android:layout_height="wrap_content">
<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/Password"
    android:hint="@string/Password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

<ProgressBar
android:id="@+id/progressBar"
android:visibility="gone"
android:layout_width="wrap_content"
android:layout_height="wrap_content"/>

<Button
android:id="@+id/btn_login"
android:text="@string/Login"
android:layout_width="wrap_content"
android:layout_height="wrap_content"/>

<TextView
android:textStyle="bold"
android:textSize="15sp"
android:gravity="center"
android:id="@+id/registernow"
android:text="@string/Click_here_to_register"
android:layout_width="match_parent"
android:layout_height="wrap_content"/>
    </LinearLayout>
